pure price action base strategies

--- a/.env
+++ b/.env
@@ -10,14 +10,15 @@ BINANCE_RECV_WINDOW=10000
 # -----------------------------------------------------
 # TRADING CONFIGURATION
 # -----------------------------------------------------
-# Primary trading symbol  ///
+# Trading Parameters
 TRADING_SYMBOL=ETHUSDT
+STRATEGY=PurePriceActionStrategy
 
 # Strategy to use
-STRATEGY=SmartTrendCatcher
+STRATEGY=PurePriceActionStrategy
 
 # Timeframe for analysis (30m optimal for SmartTrendCatcher)
-TIMEFRAME=15m
+TIMEFRAME=5m
 
 # Leverage settings
 LEVERAGE=20
@@ -47,24 +48,22 @@ COMPOUND_MAX_DRAWDOWN=0.15       # Pause if >15% drawdown
 COMPOUND_SCALING_FACTOR=0.5      # Reduce compounding if performance poor
 
 # -----------------------------------------------------
-# -----------------------------------------------------
-# TECHNICAL INDICATORS - EMA + ADX Strategy
+# PURE PRICE ACTION STRATEGY - NO INDICATORS
 # -----------------------------------------------------
 
-# EMA parameters (10/30 EMA Alignment Strategy)
-FAST_EMA=10    # Fast EMA (10 period)
-SLOW_EMA=30    # Slow EMA (30 period)
-
-# ADX parameters (Average Directional Index for trend strength filtering)
-ADX_PERIOD=14     # ADX period (14 is standard)
-ADX_THRESHOLD=20  # ADX threshold - if ADX <= 20 then HOLD (weak trend)
+# Price action analysis parameters (pure mathematical approach)
+PRICE_ACTION_LOOKBACK=20     # Lookback period for price pattern analysis
+BREAKOUT_THRESHOLD=0.02      # 2% breakout threshold for support/resistance breaks
+VOLATILITY_WINDOW=14         # Window for volatility calculations
+MOMENTUM_WINDOW=10           # Window for momentum calculations  
+SUPPORT_RESISTANCE_STRENGTH=3 # Strength required for S/R level identification
 
 # -----------------------------------------------------
-# RISK MANAGEMENT - EMA + ADX Strategy
+# RISK MANAGEMENT - Pure Price Action Strategy
 # -----------------------------------------------------
 # Stop loss settings
 USE_STOP_LOSS=True
-STOP_LOSS_PCT=0.015  # 1.5% stop loss
+STOP_LOSS_PCT=0.01  # 1% stop loss
 
 # Trailing stop settings  
 TRAILING_STOP=True
@@ -76,7 +75,7 @@ TAKE_PROFIT_PCT=0.06  # 6% fixed take profit
 UPDATE_TRAILING_ON_HOLD=True  # Update trailing stop on HOLD signals
 
 # -----------------------------------------------------
-# BACKTEST SETTINGS - EMA + ADX Strategy Validation
+# BACKTEST SETTINGS - Pure Price Action Strategy Validation
 # -----------------------------------------------------
 BACKTEST_BEFORE_LIVE=True  # Enable validation before live trading
 BACKTEST_MIN_PROFIT_PCT=10.0  # Require at least 10% profit (matches config.py)
