fix support and resistence

--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ BINANCE_RECV_WINDOW=10000
 # TRADING CONFIGURATION
 # -----------------------------------------------------
 # Trading Parameters
-TRADING_SYMBOL=ETHUSDT
-STRATEGY=PurePriceActionStrategy
+TRADING_SYMBOL=SOLUSDT
+
 
 # Strategy to use
 STRATEGY=PurePriceActionStrategy
@@ -67,11 +67,11 @@ STOP_LOSS_PCT=0.01  # 1% stop loss
 
 # Trailing stop settings  
 TRAILING_STOP=True
-TRAILING_STOP_PCT=0.03  # 3% trailing stop
+TRAILING_STOP_PCT=0.01  # 1% trailing stop
 
 # Take profit settings - Fixed take profit (not trailing)
 USE_TAKE_PROFIT=True
-TAKE_PROFIT_PCT=0.06  # 6% fixed take profit
+TAKE_PROFIT_PCT=0.04  # 4% fixed take profit
 UPDATE_TRAILING_ON_HOLD=True  # Update trailing stop on HOLD signals
 
 # -----------------------------------------------------
