--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ BINANCE_RECV_WINDOW=10000
 # TRADING CONFIGURATION
 # -----------------------------------------------------
 # Trading Parameters
-TRADING_SYMBOL=BTCUSDT
+TRADING_SYMBOL=SOLUSDT
 
 
 # Strategy to use
