fix 29 jun last

--- a/.env
+++ b/.env
@@ -48,6 +48,7 @@ COMPOUND_MAX_DRAWDOWN=0.15       # Pause if >15% drawdown
 COMPOUND_SCALING_FACTOR=0.5      # Reduce compounding if performance poor
 
 # -----------------------------------------------------
+# -----------------------------------------------------
 # PURE PRICE ACTION STRATEGY - NO INDICATORS
 # -----------------------------------------------------
 
@@ -57,6 +58,35 @@ BREAKOUT_THRESHOLD=0.02      # 2% breakout threshold for support/resistance brea
 VOLATILITY_WINDOW=14         # Window for volatility calculations
 MOMENTUM_WINDOW=10           # Window for momentum calculations  
 SUPPORT_RESISTANCE_STRENGTH=3 # Strength required for S/R level identification
+
+# Enhanced Configurable Thresholds for Pure Price Action Strategy
+# -----------------------------------------------------
+# Resistance Level Thresholds (fine-tuned for market conditions)
+RESISTANCE_BREAKOUT_THRESHOLD=1.002  # 0.2% above resistance for breakout confirmation
+RESISTANCE_REJECTION_THRESHOLD=0.995  # 0.5% below resistance for rejection signal
+RESISTANCE_TOUCH_THRESHOLD=0.998      # Within 0.2% of resistance to consider "touched"
+
+# Support Level Thresholds (fine-tuned for market conditions)
+SUPPORT_BREAKDOWN_THRESHOLD=0.998    # 0.2% below support for breakdown confirmation
+SUPPORT_REJECTION_THRESHOLD=1.005    # 0.5% above support for rejection signal
+SUPPORT_TOUCH_THRESHOLD=1.002        # Within 0.2% of support to consider "touched"
+
+# Momentum Analysis Thresholds (optimized for price action)
+MOMENTUM_POSITIVE_THRESHOLD=0.005    # 0.5% positive momentum threshold
+MOMENTUM_NEGATIVE_THRESHOLD=-0.005   # 0.5% negative momentum threshold
+MOMENTUM_CONFIRMATION_THRESHOLD=0.003 # 0.3% momentum for breakout confirmation
+
+# Market Condition Thresholds (adaptive to market volatility)
+VOLATILITY_MULTIPLIER=1.5            # High volatility multiplier (1.5x average)
+VOLUME_RATIO_THRESHOLD=1.5           # Above average volume threshold (1.5x average)
+BODY_RATIO_THRESHOLD=0.7             # Strong candle body threshold (70% of total range)
+
+# Price Position Thresholds (for range-based analysis)
+PRICE_POSITION_HIGH=0.8              # Near top of range threshold (80%)
+PRICE_POSITION_LOW=0.2               # Near bottom of range threshold (20%)
+
+# Support/Resistance Touch Detection (precision tuning)
+TOUCH_TOLERANCE=0.005                # 0.5% tolerance for S/R level touches
 
 # -----------------------------------------------------
 # RISK MANAGEMENT - Pure Price Action Strategy
