--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ BINANCE_RECV_WINDOW=10000
 # TRADING CONFIGURATION
 # -----------------------------------------------------
 # Trading Parameters
-TRADING_SYMBOL=SOLUSDT
+TRADING_SYMBOL=BTCUSDT
 
 
 # Strategy to use
@@ -93,15 +93,15 @@ TOUCH_TOLERANCE=0.005                # 0.5% tolerance for S/R level touches
 # -----------------------------------------------------
 # Stop loss settings
 USE_STOP_LOSS=True
-STOP_LOSS_PCT=0.005  # 0.5% stop loss
+STOP_LOSS_PCT=0.001  # 0.1% stop loss
 
 # Trailing stop settings  
 TRAILING_STOP=True
-TRAILING_STOP_PCT=0.01  # 1% trailing stop
+TRAILING_STOP_PCT=0.001  # 0.1% trailing stop
 
 # Take profit settings - Fixed take profit (not trailing)
 USE_TAKE_PROFIT=True
-TAKE_PROFIT_PCT=0.015  # 1.5% fixed take profit
+TAKE_PROFIT_PCT=0.002  # 0.2% fixed take profit
 UPDATE_TRAILING_ON_HOLD=True  # Update trailing stop on HOLD signals
 
 # -----------------------------------------------------
